# forticertman

./: LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml
forticertman/: __init__.py  __main__.py  acme.py  cli.py  config.py  daemon.py  fortigate.py
systemd/: forticertman.service  forticertman.timer
